--- a/web/homes/homeSecretaria.xhtml
+++ b/web/homes/homeSecretaria.xhtml
@@ -52,9 +52,9 @@
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
                     <figure>
-                        <img src="../resources/assets/img/logo.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;"/>
+                        <img src="../resources/imgs/Secretaria/secretaria.png" alt="ClinicaMedica" class="img-responsive center-box" style="width:55%;"/>
                     </figure>
-                    <p class="text-center" style="padding-top: 15px;">Sistema Super Administrativo</p>
+                    <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;padding-top: 15px">Usuario #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
                 </div>
 
 
@@ -63,8 +63,7 @@
                     <ul class="list-unstyled">
 
 
-                        <li><a href="home.html"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
-
+                        <li><a href="homeAdmin.xhtml" style="padding-top: 15px; font: bold small-caps 120%/200% serif"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
                         <li>
                             <div class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
@@ -100,7 +99,7 @@
                         <img src="../resources/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box"/>
                     </figure>
                     <li style="color:#fff; cursor:default;">
-                        <span class="all-tittles">Admin Name</span>
+                        <span class="all-tittles">#{controlador.usu.nombre} #{controlador.usu.apellido}</span>
                     </li>
                     <li  class="tooltips-general exit-system-button" data-href="../index.xhtml" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
@@ -124,108 +123,28 @@
             </div>
 
             <section class="full-reset text-center" style="padding: 40px 0;">
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-face"> </i></div>
-                        <div class="tile-name all-tittles">administradores</div>
-                        <div class="tile-num full-reset">7</div>
+                 <article class="tile">
+                    <a href="../Secretaria/Paciente.xhtml">
+                        <div class="tile-name all-tittles" >Mantenimiento Paciente</div>
+                        <img src="../resources/imgs/Secretaria/personas1.png"  class="img-responsive img-circle center-box"/>
                     </a>
                 </article>
 
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-accounts"></i></div>
-                        <div class="tile-name all-tittles">Pacientes</div>
-                        <div class="tile-num full-reset">70</div>
-                    </a>
-                </article>
+
 
                 <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-male-alt"></i></div>
-                        <div class="tile-name all-tittles">Doctores</div>
-                        <div class="tile-num full-reset">11</div>
-                    </a>
-                </article>
+                    <a href="Turno.xhtml">
+                        <div class="tile-name all-tittles">Empleados</div>
+                        <img src="../resources/imgs/Secretaria/Empleados.png"  class="img-responsive img-circle center-box"/>
 
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-male-female"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">personal administrativo</div>
-                        <div class="tile-num full-reset">17</div>
-                    </a>
-                </article>
 
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-truck"></i></div>
-                        <div class="tile-name all-tittles">proveedores</div>
-                        <div class="tile-num full-reset">21</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-book"></i></div>
-                        <div class="tile-name all-tittles">Medicina</div>
-                        <div class="tile-num full-reset">77</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-bookmark-outline"></i></div>
-                        <div class="tile-name all-tittles">categoria de enfermedad</div>
-                        <div class="tile-num full-reset">11</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-assignment-account"></i></div>
-                        <div class="tile-name all-tittles">Consultas</div>
-                        <div class="tile-num full-reset">17</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
-                        <div class="tile-name all-tittles">Servicios</div>
-                        <div class="tile-num full-reset">10</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-time-restore"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">devoluciones pendientes</div>
-                        <div class="tile-num full-reset">9</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-calendar"></i></div>
-                        <div class="tile-name all-tittles">Revisiones</div>
-                        <div class="tile-num full-reset">7</div>
-                    </a>
-                </article>
-
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-trending-up"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">reportes y estadísticas</div>
-                        <div class="tile-num full-reset">&nbsp;</div>
                     </a>
                 </article>
             </section>
 
-
-
             <!-- Pie de pagina-->
-            <footer class="footer full-reset">
-                <div class="container-fluid">
+            <footer class="footer full-reset footer">
+                <div class="container-fluid footer">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <h4 class="all-tittles">Acerca de</h4>
