--- a/web/homes/homeSecretaria.xhtml
+++ b/web/homes/homeSecretaria.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>Panel de Control</title>
         <!-- Esta pagina representa el panel de control principal de el administrador -->
@@ -39,9 +40,9 @@
 
     </h:head>
     <h:body>
-        
+
         <f:event type="preRenderView" listener="#{controlador.verificarSesion()}"/>
-        
+
         <!-- NavBar lateral de la pagina -->
         <div class="navbar-lateral full-reset">
             <div class="visible-xs font-movile-menu mobile-menu-button"></div>
@@ -51,10 +52,22 @@
                     sistema clinica medica
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
-                    <figure>
-                        <img src="../resources/imgs/Secretaria/secretaria.png" alt="ClinicaMedica" class="img-responsive center-box" style="width:55%;"/>
-                    </figure>
-                    <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;padding-top: 15px">Usuario #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+
+                    <c:if test="#{controlador.Validador() == 1}">
+                        <figure>
+                            <img src="../resources/imgs/Admin/boss.png" class="img-responsive center-box" style="width:55%;"/>      
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;padding-top: 15px">Administrador #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
+
+                    <c:if test="#{controlador.Validador() == 4}">
+                        <figure>
+                            <img src="../resources/imgs/Secretaria/secretaria.png" alt="ClinicaMedica" class="img-responsive center-box" style="width:55%;"/>
+                            <p class="text-center" style="padding-top: 15px; font: bold small-caps 120%/200% serif;padding-top: 15px">Recepcionista #{controlador.usu.nombre} #{controlador.usu.apellido}</p>
+                        </figure>
+                    </c:if>
+
+
                 </div>
 
 
@@ -63,8 +76,14 @@
                     <ul class="list-unstyled">
 
 
-                        <li><a href="homeAdmin.xhtml" style="padding-top: 15px; font: bold small-caps 120%/200% serif"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
-                        <li>
+
+                        <c:if test="#{controlador.Validador() == 1}">
+                            <li><a href="homeAdmin.xhtml" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio </a></li>
+                        </c:if>
+
+                        <c:if test="#{controlador.Validador() == 4}">
+                            <li><a href="homeSecretaria.xhtml" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio </a></li>
+                        </c:if> <li>
                             <div class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
                                 <li><a href="faces/vistaCompleta/nuevoIngresoPaciente.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Usuario</a></li>
@@ -123,7 +142,7 @@
             </div>
 
             <section class="full-reset text-center" style="padding: 40px 0;">
-                 <article class="tile">
+                <article class="tile">
                     <a href="../Secretaria/Paciente.xhtml">
                         <div class="tile-name all-tittles" >Mantenimiento Paciente</div>
                         <img src="../resources/imgs/Secretaria/personas1.png"  class="img-responsive img-circle center-box"/>
