--- a/web/Doctor/VistaMedicamento.xhtml
+++ b/web/Doctor/VistaMedicamento.xhtml
@@ -140,7 +140,7 @@
                                         <div class="col-lg-3">  
                                             <label> Código  Medicamento</label>
                                             <div class="group-material">
-                                                <b:inputText id="Buscar" placeholder="Buscar :" style="width: 300px" value="#{medicamentoBean.med.idmedicamento}" />
+                                                <b:inputText id="Buscar" placeholder="Buscar :" style="width: 300px" value="#{medicamentoBean.med.nombre}" />
 
 
                                             </div>
@@ -191,11 +191,8 @@
                                             <div class="group-material">
                                                 <b:inputText   value="#{medicamentoBean.med.provedor}" readonly="true"/>
                                             </div>
-                                            <label>Inventario</label>
-                                            <div class="group-material">
-                                                <b:inputText   value="#{medicamentoBean.med.idInventario}" readonly="true"/>
-                                            </div>
-
+                                            
+                                            
 
                                         </h:form>
 
