--- a/web/homes/homeDoctor.xhtml
+++ b/web/homes/homeDoctor.xhtml
@@ -194,22 +194,22 @@
                 </article>
 
 
-
+<!--
                 <article class="tile">
                     <a href="../Doctor/VistaExamen.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/microscope.png" width="60" height="60"></img></i></div>
                         <div class="tile-num full-reset">Buscar Examen</div>
                     </a>
-                </article>
+                </article>-->
 
 
 
-                <article class="tile">
+<!--                <article class="tile">
                     <a href="../Doctor/VistaReferenciaClinica.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/hospital.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Referencias</div>
                     </a>
-                </article>  
+                </article>  -->
 
                 <article class="tile">
                     <a href="../Doctor/VistaEnfermedad.xhtml">
@@ -218,12 +218,12 @@
                     </a>
                 </article>
 
-                <article class="tile">
+<!--                <article class="tile">
                     <a href="../Doctor/BuscarRevisionGeneral.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"><img class="title-icon" src="../resources/imgs/Doctor/xray.png" width="60" height="60"></img></i></div>
                         <div class="tile-num full-reset">Revisión</div>
                     </a>
-                </article>
+                </article>-->
 
 
                 <article class="tile">
